<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/activity_welcome"
    android:gravity="center"
    android:weightSum="1">

    <ImageView
        android:layout_width="108dp"
        android:layout_height="110dp"
        android:src="@drawable/zeamoicon"
        android:id="@+id/zeamonicon"
        android:layout_weight="0.01" />

    <TextView
        android:text="@string/zeamo"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textSize="25sp"
        android:textColor="#16293E"
        android:textStyle="bold"
        android:id="@+id/textView"
        android:layout_marginBottom="40px"
        android:layout_marginTop="10sp"/>

    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="40px"
       android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="0.11">
       <TextView
           android:text="@string/seach_book"
           android:layout_width="120dp"
           android:layout_height="40dp"
           android:textSize="20sp"
           android:textColor="@color/colorMyPrimary"
           android:id="@+id/textView2"
           />

       <TextView
           android:text="@string/cash"
           android:layout_width="60dp"
           android:layout_height="40dp"
           android:textSize="20sp"
           android:textColor="@color/colorPrimaryDark"
           android:id="@+id/textView3"/>
   </LinearLayout>

    <Button
        android:text="@string/createaccount"
        android:layout_width="260dp"
        android:textStyle="bold"
        android:layout_height="55sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20px"
        android:id="@+id/btnCreateAccount"
        android:background="@drawable/custom_btn" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55px"
        android:gravity="center"
        android:layout_marginTop="20px">
        <TextView
            android:text="@string/have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="22sp"
            android:textColor="@color/colorBrow"
            android:id="@+id/textView4" />

        <Button
            android:text="@string/log_in"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:background="@null"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:id="@+id/btnLogIn"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/arrowlogin"
            android:background="@null"
            android:id="@+id/arrowlogin"/>
    </LinearLayout>
</LinearLayout>