<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/imgBtnBack_create"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            app:srcCompat="@drawable/ic_btn_back" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:text="@string/create_account_cr"
                android:textColor="@color/colorPrimary"
                android:textSize="21sp"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="1"
        android:layout_weight="0.65">

        <ImageButton
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:src="@drawable/camera_create"
            android:id="@+id/imgCameraCreate"
            android:background="@null"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/upload_your_picture"
            android:gravity="center"
            android:id="@+id/txt1"
            android:textColor="#16293E"
            android:layout_marginBottom="30dp"/>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/custom_full_edt">

            <EditText
                android:layout_width="295dp"
                android:layout_height="60dp"
                android:inputType="textPersonName"
                android:hint="@string/first_name"
                android:gravity="center_vertical"
                android:textColorHint="#41597F"
                android:padding="15dp"
                android:layout_marginTop="3dp"
                android:textSize = "20sp"
                android:textColor="#41597F"
                android:id="@+id/editFirstNameCreate"
                android:background="@color/colorActiveSmall"/>

            <View
                android:layout_width="wrap_content"
                android:background="@drawable/line"
                android:layout_height="2dp">
            </View>

            <EditText
                android:layout_width="297dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:gravity="center_vertical"
                android:textColorHint="#41597F"
                android:hint="@string/last_name"
                android:padding="15dp"
                android:textSize = "20sp"
                android:textColor="#41597F"
                android:ems="10"
                android:id="@+id/editLastNameCreate"
                android:background="@color/colorActiveSmall"
                android:layout_marginBottom="3dp"/>
        </LinearLayout>

        <Button
            android:text="@string/create_account_cr1"
            android:layout_width="280dp"
            android:textStyle="bold"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:id="@+id/btnCreateAccount"
            android:background="@drawable/custom_btn"/>
    </LinearLayout>
</LinearLayout>